compiling_error.txt
/home/jul/github/Houses/houses.cpp: In function ‘void program()’:
/home/jul/github/Houses/houses.cpp:72:9: error: ‘inputIs1’ was not declared in this scope
         inputIs1();
         ^~~~~~~~
/home/jul/github/Houses/houses.cpp:72:9: note: suggested alternative: ‘input’
         inputIs1();
         ^~~~~~~~
         input
/home/jul/github/Houses/houses.cpp:76:9: error: ‘inputIs2’ was not declared in this scope
         inputIs2();
         ^~~~~~~~
/home/jul/github/Houses/houses.cpp:76:9: note: suggested alternative: ‘input’
         inputIs2();
         ^~~~~~~~
         input
/home/jul/github/Houses/houses.cpp:79:7: error: ‘inputIs3’ was not declared in this scope
       inputIs3();
       ^~~~~~~~
/home/jul/github/Houses/houses.cpp:79:7: note: suggested alternative: ‘input’
       inputIs3();
       ^~~~~~~~
       input
/home/jul/github/Houses/houses.cpp:84:7: error: ‘inputIs4’ was not declared in this scope
       inputIs4();
       ^~~~~~~~
/home/jul/github/Houses/houses.cpp:84:7: note: suggested alternative: ‘input’
       inputIs4();
       ^~~~~~~~
       input
/home/jul/github/Houses/houses.cpp:87:7: error: ‘inputIs5’ was not declared in this scope
       inputIs5();
       ^~~~~~~~
/home/jul/github/Houses/houses.cpp:87:7: note: suggested alternative: ‘input’
       inputIs5();
       ^~~~~~~~
       input
/home/jul/github/Houses/houses.cpp:90:7: error: ‘inputIs6’ was not declared in this scope
       inputIs6();
       ^~~~~~~~
/home/jul/github/Houses/houses.cpp:90:7: note: suggested alternative: ‘input’
       inputIs6();
       ^~~~~~~~
       input
/home/jul/github/Houses/houses.cpp:94:9: error: ‘inputIs7’ was not declared in this scope
         inputIs7();
         ^~~~~~~~
/home/jul/github/Houses/houses.cpp:94:9: note: suggested alternative: ‘input’
         inputIs7();
         ^~~~~~~~
         input
